[package]
name = "nyxflare"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

[dev-dependencies]
mockito = "1"
